# cmaketpl

./: CMakeLists.txt  TestConfig.h  TestConfig.h.in  foo.cpp  foo.h  main.cpp
inc/: config.h
utils/: CMakeLists.txt  fooutils.cpp  fooutils.h
